Chaanged favicon, improved submit inquiry visual feedback

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>get-fit-gym</title>
+    <meta name="description" content="Get Fit Gym - Transform your body and mind with premium fitness facilities, expert trainers, and personalized workout programs in Rajkot, Gujarat." />
+    <meta name="theme-color" content="#dc2626" />
+    <title>Get Fit Gym | Premium Fitness Center</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
